tests/miniJava/neg/004377_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public public java ( ) { return 0 ; } }
